Landing + subnav-bar model

--- a/index.html
+++ b/index.html
@@ -1,16 +1,72 @@
-<!DOCTYPE html>
 <html>
 <head>
   <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8"/>
 </head>
 
 <body>
-  <div class="tableau">
+<div class="tableau">
+  <div class="intro">
+    Bienvenue sur l'Être-Machine des Grands Moulins, L'HYDRA.
+  </div>
+
+  <div class="content">
+    <div class="button-box" style="font-family:VT323 ; letter-spacing:2px">
+    <a href="https://hydra.youandjerrycan.org/typical-page.html">le grimoire des URLs</a>
+    </div>
+    <div class="button-box" style="font-family:'Inknut Antiqua', serif; line-height:43px; font-size: 34px; font-weight:700">
+      en savoir plus
+    </div>
+    <!--div class="button-box">
+      yo
+    </div-->
+  </div>
+
+  <div class="logo-box">
+    <div class="button-box-small">
+      <a href="https://www.facebook.com/festivaldesidees/home" target="_blank">
+      <img src="images/uspc_logo.svg"></a>
+    </div>
+
+    <div class="button-box-small">
+      <a href="http://youandjerrycan.org/" target="_blank">
+      <img src="images/jerry_logo.svg"></a>
+    </div>
+
+    <div class="button-box-small">
+      <a href="http://lesanimauxdufutur.net/" target="_blank">
+      <img src="images/adf.svg"></a>
+    </div>
+
+    <div class="button-box-small">
+      <a href="http://bibliotheque.univ-paris-diderot.fr/bc" target="_blank">
+      <img src="images/bgmlogo.svg"></a>
+    </div>
+
+    <div class="button-box-small">
+      <a href="http://www.univ-paris-diderot.fr/sc/site.php?bc=accueil&np=accueil" target="_blank">
+      <img src="images/paris7_logo.svg"></a>
+    </div>
+  </div>
 </div>
-    <div class="cat">Bienvenue sur l'HYDRA.</div>
-    <div class="cat">Les applications sont en construction</div>
-    <div class="cat">Restez au courant :</div>
-    <div class="cat">grandsmoulins.youandjerrycan.org</div>
+
+<div class="footer-1">
+  <div class="footer-button">
+    l'hydra
+  </div>
+  <div class="footer-button">
+    Le grimoire
+  </div>
+  <!--div class="button">
+    heure
+  </div>
+  <div class="button">
+    heure
+  </div-->
+  <div class="footer-button">
+    heure
+  </div>
+</div>
 
 </body>
 </html>
